samples/_failures_safe/1761374233_c6ee93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6dc63cce.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_6dc63cce.c:180:9: error: expected ‘:’ or ‘...’ at end of input
  180 |         case TOKEN_EOF
      |         ^~~~
./samples/SAFE/__tmp_6dc63cce.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6dc63cce.c:180:9: error: expected declaration or statement at end of input
